edited cleaning to created separate csv for different dataset for sql

--- a/convert_to_sql_script.ipynb
+++ b/convert_to_sql_script.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,12 +42,12 @@
        "      <th></th>\n",
        "      <th>year-quarter</th>\n",
        "      <th>state</th>\n",
-       "      <th>bene_sex_desc</th>\n",
-       "      <th>bene_age_desc</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age_group</th>\n",
        "      <th>total_bene_th_elig</th>\n",
        "      <th>total_bene_telehealth</th>\n",
        "      <th>pct_telehealth</th>\n",
-       "      <th>telehealthtype</th>\n",
+       "      <th>service_type</th>\n",
        "      <th>servicecount</th>\n",
        "      <th>rateper1000beneficiaries</th>\n",
        "      <th>group</th>\n",
@@ -238,20 +238,20 @@
        "</div>"
       ],
       "text/plain": [
-       "       year-quarter    state bene_sex_desc bene_age_desc  total_bene_th_elig  \\\n",
-       "0            2018-1  Alabama           NaN           NaN                 NaN   \n",
-       "1            2018-1  Alabama           NaN           NaN                 NaN   \n",
-       "2            2018-1  Alabama           NaN           NaN                 NaN   \n",
-       "3            2018-2  Alabama           NaN           NaN                 NaN   \n",
-       "4            2018-2  Alabama           NaN           NaN                 NaN   \n",
-       "...             ...      ...           ...           ...                 ...   \n",
-       "199040       2024-2  Wyoming           NaN         65-74             32849.0   \n",
-       "199041       2024-2  Wyoming           NaN         75-84             21882.0   \n",
-       "199042       2024-2  Wyoming           NaN   85 and over              7560.0   \n",
-       "199043       2024-2  Wyoming           NaN           NaN             46806.0   \n",
-       "199044       2024-2  Wyoming           NaN           NaN             20500.0   \n",
+       "       year-quarter    state  sex    age_group  total_bene_th_elig  \\\n",
+       "0            2018-1  Alabama  NaN          NaN                 NaN   \n",
+       "1            2018-1  Alabama  NaN          NaN                 NaN   \n",
+       "2            2018-1  Alabama  NaN          NaN                 NaN   \n",
+       "3            2018-2  Alabama  NaN          NaN                 NaN   \n",
+       "4            2018-2  Alabama  NaN          NaN                 NaN   \n",
+       "...             ...      ...  ...          ...                 ...   \n",
+       "199040       2024-2  Wyoming  NaN        65-74             32849.0   \n",
+       "199041       2024-2  Wyoming  NaN        75-84             21882.0   \n",
+       "199042       2024-2  Wyoming  NaN  85 and over              7560.0   \n",
+       "199043       2024-2  Wyoming  NaN          NaN             46806.0   \n",
+       "199044       2024-2  Wyoming  NaN          NaN             20500.0   \n",
        "\n",
-       "        total_bene_telehealth  pct_telehealth    telehealthtype servicecount  \\\n",
+       "        total_bene_telehealth  pct_telehealth      service_type servicecount  \\\n",
        "0                         NaN             NaN  Live audio/video       6,905    \n",
        "1                         NaN             NaN  Live audio/video       4,821    \n",
        "2                         NaN             NaN  Live audio/video       2,269    \n",
@@ -280,15 +280,434 @@
        "[199045 rows x 13 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#read merged data\n",
-    "data = pd.read_csv('data/final_merged_data.csv', na_values=[\"\"])\n",
-    "data"
+    "merged_data = pd.read_csv('data/clean/final_merged_data.csv', na_values=[\"\"])\n",
+    "merged_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>TelehealthType</th>\n",
+       "      <th>ServiceType</th>\n",
+       "      <th>ServiceCount</th>\n",
+       "      <th>RatePer1000Beneficiaries</th>\n",
+       "      <th>DataQuality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>201801</td>\n",
+       "      <td>Live audio/video</td>\n",
+       "      <td>All</td>\n",
+       "      <td>6,905</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>201801</td>\n",
+       "      <td>Other telehealth</td>\n",
+       "      <td>All</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>201801</td>\n",
+       "      <td>Remote patient monitoring</td>\n",
+       "      <td>All</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>201801</td>\n",
+       "      <td>Store and forward</td>\n",
+       "      <td>All</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>201802</td>\n",
+       "      <td>Live audio/video</td>\n",
+       "      <td>All</td>\n",
+       "      <td>4,821</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12715</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>202211</td>\n",
+       "      <td>Store and forward</td>\n",
+       "      <td>All</td>\n",
+       "      <td>DS</td>\n",
+       "      <td>DS</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12716</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>202212</td>\n",
+       "      <td>Live audio/video</td>\n",
+       "      <td>All</td>\n",
+       "      <td>3,189</td>\n",
+       "      <td>35.7</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12717</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>202212</td>\n",
+       "      <td>Other telehealth</td>\n",
+       "      <td>All</td>\n",
+       "      <td>DS</td>\n",
+       "      <td>DS</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12718</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>202212</td>\n",
+       "      <td>Remote patient monitoring</td>\n",
+       "      <td>All</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12719</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>202212</td>\n",
+       "      <td>Store and forward</td>\n",
+       "      <td>All</td>\n",
+       "      <td>DS</td>\n",
+       "      <td>DS</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12720 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         State  Year   Month             TelehealthType ServiceType  \\\n",
+       "0      Alabama  2018  201801           Live audio/video         All   \n",
+       "1      Alabama  2018  201801           Other telehealth         All   \n",
+       "2      Alabama  2018  201801  Remote patient monitoring         All   \n",
+       "3      Alabama  2018  201801          Store and forward         All   \n",
+       "4      Alabama  2018  201802           Live audio/video         All   \n",
+       "...        ...   ...     ...                        ...         ...   \n",
+       "12715  Wyoming  2022  202211          Store and forward         All   \n",
+       "12716  Wyoming  2022  202212           Live audio/video         All   \n",
+       "12717  Wyoming  2022  202212           Other telehealth         All   \n",
+       "12718  Wyoming  2022  202212  Remote patient monitoring         All   \n",
+       "12719  Wyoming  2022  202212          Store and forward         All   \n",
+       "\n",
+       "      ServiceCount RatePer1000Beneficiaries DataQuality  \n",
+       "0           6,905                       5.6         NaN  \n",
+       "1             -                           0         NaN  \n",
+       "2             -                           0         NaN  \n",
+       "3             -                           0         NaN  \n",
+       "4           4,821                       3.9         NaN  \n",
+       "...            ...                      ...         ...  \n",
+       "12715          DS                        DS         NaN  \n",
+       "12716       3,189                      35.7         NaN  \n",
+       "12717          DS                        DS         NaN  \n",
+       "12718          33                         0         NaN  \n",
+       "12719          DS                        DS         NaN  \n",
+       "\n",
+       "[12720 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "telemedicine_services = pd.read_csv('data/raw/Telehealth Services Provided to the MedicaidCHIP Population.csv')\n",
+    "telemedicine_services"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data Cleaning for Telehealth Services Provided to the Medicaid and CHIP Population \n",
+    "\n",
+    "# Drop irrelevant columns \n",
+    "telemedicine_services_clean = telemedicine_services.drop(columns = ['ServiceType']) \n",
+    "\n",
+    "# Remove rows with \"Unusable\" in DataQuality column\n",
+    "telemedicine_services_clean = telemedicine_services_clean[telemedicine_services_clean['DataQuality'] != 'Unusable']\n",
+    "\n",
+    "# Remove rows with \"DS\" in any column\n",
+    "telemedicine_services_clean = telemedicine_services_clean[~telemedicine_services_clean.eq('DS').any(axis=1)]\n",
+    "telemedicine_services_clean = telemedicine_services_clean.drop(columns = ['DataQuality'])\n",
+    "\n",
+    "# Remove rows with missing values in ServiceCount and RatePer1000Beneficiaries\n",
+    "telemedicine_services_clean = telemedicine_services_clean[\n",
+    "    (telemedicine_services_clean['ServiceCount'] != '-') & \n",
+    "    (telemedicine_services_clean['RatePer1000Beneficiaries'] != '0')\n",
+    "]\n",
+    "\n",
+    "telemedicine_services_clean['Month'] = telemedicine_services_clean['Month']%100\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>TelehealthType</th>\n",
+       "      <th>ServiceCount</th>\n",
+       "      <th>RatePer1000Beneficiaries</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Live audio/video</td>\n",
+       "      <td>6,905</td>\n",
+       "      <td>5.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Live audio/video</td>\n",
+       "      <td>4,821</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Live audio/video</td>\n",
+       "      <td>2,269</td>\n",
+       "      <td>1.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Live audio/video</td>\n",
+       "      <td>2,290</td>\n",
+       "      <td>1.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Live audio/video</td>\n",
+       "      <td>2,380</td>\n",
+       "      <td>1.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12704</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Live audio/video</td>\n",
+       "      <td>2,977</td>\n",
+       "      <td>34.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12708</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Live audio/video</td>\n",
+       "      <td>2,987</td>\n",
+       "      <td>34.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12710</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Remote patient monitoring</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12712</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Live audio/video</td>\n",
+       "      <td>3,247</td>\n",
+       "      <td>36.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12716</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Live audio/video</td>\n",
+       "      <td>3,189</td>\n",
+       "      <td>35.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3874 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         State  Year  Month             TelehealthType ServiceCount  \\\n",
+       "0      Alabama  2018      1           Live audio/video       6,905    \n",
+       "4      Alabama  2018      2           Live audio/video       4,821    \n",
+       "8      Alabama  2018      3           Live audio/video       2,269    \n",
+       "12     Alabama  2018      4           Live audio/video       2,290    \n",
+       "16     Alabama  2018      5           Live audio/video       2,380    \n",
+       "...        ...   ...    ...                        ...          ...   \n",
+       "12704  Wyoming  2022      9           Live audio/video       2,977    \n",
+       "12708  Wyoming  2022     10           Live audio/video       2,987    \n",
+       "12710  Wyoming  2022     10  Remote patient monitoring          40    \n",
+       "12712  Wyoming  2022     11           Live audio/video       3,247    \n",
+       "12716  Wyoming  2022     12           Live audio/video       3,189    \n",
+       "\n",
+       "      RatePer1000Beneficiaries  \n",
+       "0                          5.6  \n",
+       "4                          3.9  \n",
+       "8                          1.8  \n",
+       "12                         1.8  \n",
+       "16                         1.9  \n",
+       "...                        ...  \n",
+       "12704                     34.2  \n",
+       "12708                     34.2  \n",
+       "12710                      0.5  \n",
+       "12712                     36.7  \n",
+       "12716                     35.7  \n",
+       "\n",
+       "[3874 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "telemedicine_services_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export telemedicine_services_clean dataset into csv file\n",
+    "\n",
+    "telemedicine_services_clean.to_csv('data/clean/tele_service_for_sql.csv', index=False)"
    ]
   },
   {
